<resources>
    <string name="app_name">Where\'s my bike?</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>

    <string name="last_parking">Last parking:</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_manual">Manually</string>
    <string name="dialog_gps">Automatically</string>
    <string name="dialog_title_select_method">Please select the method to use</string>
    <string name="dialog_title_reset">Are you sure you want to reset?</string>

    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_make_sure_enabled">Please make sure that the GPS is enabled.</string>

    <string name="no_previous_parkings">You have no previous parkings!</string>
    <string name="permission_required">This requires a certain permission!</string>

    <string name="nav_title">What do you want to do?</string>

    <string name="you_are_here_start">You are here! (</string>
    <string name="you_are_here_end"> m away)</string>
    <string name="you_have_arrived">You have arrived!</string>
    <string name="gps_disabled_short">"GPS Disabled"</string>
    <string name="gps_enabled_short">GPS Enabled</string>

    <string name="nav_item_map">Home</string>
    <string name="nav_item_park">Parkings</string>
    <string name="nav_item_find">Find</string>
    <string name="nav_item_reset">Reset</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_feedback">Send feedback!</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_map</item>
        <item>@string/nav_item_park</item>
        <item>@string/nav_item_find</item>
        <item>@string/nav_item_reset</item>
    </string-array>

    <string-array name="nav_drawer_icon">
        <item>@drawable/ic_action_map</item>
        <item>@drawable/ic_action_park</item>
        <item>@drawable/ic_action_find</item>
        <item>@drawable/ic_action_reset</item>
    </string-array>

    <string-array name="map_types">
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Roadmap</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="map_types_values">
        <item>HYBRID</item>
        <item>SATELLITE</item>
        <item>ROADMAP</item>
        <item>TERRAIN</item>
    </string-array>
</resources>