<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item android:title="Main">
            <menu>
                <item
                    android:id="@+id/drawer_park"
                    android:checked="true"
                    android:icon="@drawable/ic_action_park"
                    android:title="@string/nav_item_park"/>

                <item
                    android:id="@+id/drawer_find"
                    android:icon="@drawable/ic_action_find"
                    android:title="@string/nav_item_find"/>

                <item
                    android:id="@+id/drawer_reset"
                    android:icon="@drawable/ic_action_reset"
                    android:title="@string/nav_item_reset"/>
            </menu>
        </item>
        <item android:title="Other">
            <menu>
                <item
                    android:id="@+id/drawer_settings"
                    android:icon="@drawable/ic_action_settings"
                    android:title="@string/nav_item_settings"/>

                <item
                    android:id="@+id/drawer_feedback"
                    android:icon="@drawable/ic_action_feedback"
                    android:title="@string/nav_item_feedback"/>
            </menu>
        </item>

    </group>
</menu>